--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ project(hashbuckets)
 add_executable(zzrndgen zzrndgen.cpp)
 target_link_libraries (zzrndgen ntl)
 
-add_executable(hbtest strint bucket hashbuckets murmurhash3 test.cpp)
+add_executable(hbtest strint bucket simplebm hashbuckets murmurhash3 test.cpp)
 target_link_libraries (hbtest ntl gmpxx gmp)
 
 install(TARGETS hbtest RUNTIME DESTINATION bin)
