Improving hash algorithms

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,8 @@ project(hashbuckets)
 add_executable(zzrndgen zzrndgen.cpp)
 target_link_libraries (zzrndgen ntl)
 
-add_executable(hbtest strint bucket simplebm outofboundex hashbuckets murmurhash3 shazzp hbtest.cpp)
-target_link_libraries (hbtest ntl gmpxx gmp cryptopp pthread) # only POSIX has got pthreads, win does not
+add_executable(hbtest strint bucket simplebm outofboundex murmurhash3 shazzp hbtest.cpp)
+target_link_libraries (hbtest ntl gmpxx gmp cryptopp pthread) # only POSIX has got pthreads, win has not
 
 install(TARGETS hbtest RUNTIME DESTINATION bin)
 install(TARGETS zzrndgen RUNTIME DESTINATION bin)
