fixup! Bucket template in single file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ project(hashbuckets)
 add_executable(zzrndgen zzrndgen.cpp)
 target_link_libraries (zzrndgen ntl)
 
-add_executable(hbtest strint bucket simplebm outofboundex murmurhash3 shazzp hbtest.cpp)
+add_executable(hbtest strint simplebm outofboundex murmurhash3 shazzp hbtest.cpp)
 target_link_libraries (hbtest ntl gmpxx gmp cryptopp pthread) # only POSIX has got pthreads, win has not
 
 install(TARGETS hbtest RUNTIME DESTINATION bin)
