Changes in comments

--- a/cmake_uninstall.cmake.in
+++ b/cmake_uninstall.cmake.in
@@ -32,4 +32,4 @@ foreach (file ${files})
 
 endforeach(file)
 
-# Copyright © 2015 Roberto Metere. All rights reserved.
+# Copyright (C) 2015 Roberto Metere. All rights reserved.
