ZZ random stream independent from local generation
I do not know if this is a good idea... but at least solves
the problem of having predictable generation for generators.

--- a/src/libhashbuckets/CMakeLists.txt
+++ b/src/libhashbuckets/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library (${LIBRARY_NAME} SHARED
         shazzp.cpp
         simplebm.cpp
         strint.cpp
+        indzzrndstream.cpp
         zzrandgen.cpp
         zzprandgen.cpp
         strrandgen.cpp
