--- a/src/libhashbuckets/CMakeLists.txt
+++ b/src/libhashbuckets/CMakeLists.txt
@@ -10,7 +10,7 @@ add_library (${LIBRARY_NAME} SHARED
         shazzp.cpp
         simplebm.cpp
         strint.cpp
-        indzzrndstream.cpp
+#         indzzrndstream.cpp
         zzrandgen.cpp
         zzprandgen.cpp
         strrandgen.cpp
