--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,7 +66,7 @@ if (WIN32)
 	set (PLATFORM_INDEPENDENT_CODE_FLAG "")
 endif (WIN32)
 
-set (CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -O${OPTIMIZATION} ${BIT32} ${PLATFORM_INDEPENDENT_CODE_FLAG} ${DEBUG_FLAG} ${DEBUG_INFO_FLAG} ${ARCH_CFLAG}")
+set (CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -pedantic -O${OPTIMIZATION} ${BIT32} ${PLATFORM_INDEPENDENT_CODE_FLAG} ${DEBUG_FLAG} ${DEBUG_INFO_FLAG} ${ARCH_CFLAG}")
 
 # Apple stuff
 if(APPLE)
