--- a/src/libhashbuckets/CMakeLists.txt
+++ b/src/libhashbuckets/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library (${LIBRARY_NAME} SHARED
         strrandgen.cpp
         stringkeygen.cpp
         strzzpkeygen.cpp
+        hspsiserver.cpp
+        hspsiclient.cpp
         libhashbuckets.rc
         )
 
