Reorganise EOPSIParty not as template (it was not)

--- a/src/libhashbuckets/CMakeLists.txt
+++ b/src/libhashbuckets/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library (${LIBRARY_NAME} SHARED
         bytekeygen.cpp
         strzzpkeygen.cpp
         eopsimsg.cpp
+        eopsiparty.cpp
         eopsiserver.cpp
         eopsiclient.cpp
         libhashbuckets.rc
