--- a/src/libhashbuckets/CMakeLists.txt
+++ b/src/libhashbuckets/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library (${LIBRARY_NAME} SHARED
         strint.cpp
         zzprf.cpp
         zzpprf.cpp
+        zzppoly.cpp
         eopsimsg.cpp
         eopsiparty.cpp
         eopsiserver.cpp
